--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
         <span class="text-label new">new</span>
     </div>
 
+    <br />
+    <br />
+
+    <!--progress bar -->
+    <div class="timing-progress">
+        <div class="progress-bar"></div>
+    </div>
+
+    <br />
+
+    <div class="progress">
+        <div class="progress-bar"></div>
+    </div>
+
 </body>
 </html>
