sale size label;

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     <br />
     <br />
 
+    <!-- sale size label -->
+    <ul class="sale-size">
+        <li><a href="#">XS</a></li>
+        <li class="active"><a href="#">S</a></li>
+        <li><a href="#">M</a></li>
+        <li><a href="#">L</a></li>
+        <li><a href="#">XL</a></li>
+    </ul>
+
+    <div style="clear: both"></div>
+
+    <br />
+    <br />
+
     <!--progress bar -->
     <div class="timing-progress">
         <div class="progress-bar"></div>
