redefined input: radio, checkbox, number, email;

--- a/index.html
+++ b/index.html
@@ -41,5 +41,22 @@
         <div class="progress-bar"></div>
     </div>
 
+    <br />
+    <br />
+    <!--redefined form input-->
+    <div class="">
+        <input type="radio" class="colorfull-ui">
+
+        <input type="radio" class="colorfull-ui checked">
+
+        <input type="checkbox" class="colorfull-ui"> 
+
+        <input type="email" class="colorfull-ui email" value="Email"> 
+
+        <input type="email" class="colorfull-ui email valid" value="424087283@qq.com"> 
+
+        <input type="text" class="colorfull-ui number" value="1">
+    </div>
+
 </body>
 </html>
