redefined select, base style;

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
         <input type="email" class="colorfull-ui email valid" value="424087283@qq.com"> 
 
         <input type="text" class="colorfull-ui number" value="1">
+
+        <select id="" class="colorfull-ui" name="">
+            <option value="one">one</option>
+            <option value="two">two</option>
+            <option value="three">three</option>
+        </select>
     </div>
 
 </body>
