--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>colorfull ui demo</title>
     <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- basic label -->
@@ -62,6 +63,31 @@
             <option value="two">two</option>
             <option value="three">three</option>
         </select>
+    </div>
+
+
+    <br />
+    <div>
+        <span class="tag tag-free"><i class="icon icon-circle"></i> Free</span>
+        <span class="tag tag-like"><i class="fa fa-heart-o icon icon-like" aria-hidden="true"></i> 345</span>
+        <span class="tag tag-share"><i class="fa fa-share-square-o icon icon-share"></i> Share</span>
+        <span class="tag tag-calendar"><i class="fa fa-calendar icon icon-calendar"></i> Date of Birth</span>
+
+        <span class="tag tag-stars"><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i> 439 reviews</span>
+        <span class="tag tag-done">Done</span>
+
+        <br />
+        <br />
+        <span class="tag tag-cart">Cart</span>
+
+        <br />
+        <br />
+        <span class="tag tag-checkout">Checkout</span>
+
+        <br />
+        <br />
+        <span class="tag tag-shipping">Shipping</span>
+
     </div>
 
 </body>
