redefined input: checkbox, single-checkbox;

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
             <option value="two">two</option>
             <option value="three">three</option>
         </select>
+
+        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Female
+        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Male
+
+        <input type="checkbox" class="colorfull-ui single-checkbox" name="single-checkbox"> Remeber me 
+        
     </div>
 
 
@@ -75,6 +81,8 @@
 
         <span class="tag tag-stars"><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i> 439 reviews</span>
         <span class="tag tag-done">Done</span>
+
+        <span class="tag tag-dollar"><i class="icon icon-circle"></i> $100</span>
 
         <br />
         <br />
