media button, social label;

--- a/index.html
+++ b/index.html
@@ -98,5 +98,40 @@
 
     </div>
 
+    <div>
+        <span class="social social-twitter">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+        </span>
+        <span class="social social-facebook">
+            <i class="fa fa-facebook-f" aria-hidden="true"></i>
+        </span>
+        <span class="social social-google">
+            <i class="fa fa-google" aria-hidden="true"></i>
+        </span>
+    </div>
+
+    <br />
+    <div>
+        <button class="media media-circle-play">
+            <i class="fa fa-play icon" aria-hidden="true"></i>
+        </button>
+
+        <button class="media media-circle-play" style="background: red">
+            <i class="fa fa-play icon" aria-hidden="true"></i>
+        </button>
+
+        <button class="media media-circle-play" style="background: #ddd;">
+            <i class="fa fa-play icon" aria-hidden="true"></i>
+        </button>
+
+        <button class="media media-circle-pause" style="background: #ddd;">
+            <i class="fa fa-pause icon" aria-hidden="true"></i>
+        </button>
+
+        <button class="media media-square-play">
+            <i class="fa fa-play icon" aria-hidden="true"></i>
+        </button>
+
+    </div>
 </body>
 </html>
