btn, btn-group;

--- a/index.html
+++ b/index.html
@@ -133,5 +133,26 @@
         </button>
 
     </div>
+
+    <br />
+    <div>
+        <button class="btn btn-primary"> <span class="fa fa-cart-plus icon" aria-hidden="true"></span> ADD TO CART </button>
+
+        <button class="btn btn-primary"> <span class="fa fa-check icon" aria-hidden="true"></span> Apply filter </button>
+
+        <button class="btn btn-default"> Modern <span class="fa fa-remove icon" aria-hidden="true"></span> </button>
+
+        <button class="btn btn-default">Reset filter <span class="fa fa-remove icon" aria-hidden="true"></span></button>
+
+        <button class="btn btn-info">VISIT STORE <span class="fa fa-chevron-right icon" aria-hidden="true"></span></button>
+
+        <button class="btn"><span class="fa fa-chevron-left icon" aria-hidden="true"></span> BACK TO SHOP</button>
+
+        <div class="btn-group">
+            <button class="btn btn-default">$178</button>
+            <button class="btn btn-default">BUY NOW</button>
+        </div>
+
+    </div>
 </body>
 </html>
