--- a/demo.html
+++ b/demo.html
@@ -15,9 +15,8 @@
                 </div>            
 
                 <div class="element">
-                    <div class="btn-group">
-                        <button class="btn btn-default">$178</button>
-                        <button class="btn btn-default">BUY NOW</button>
+                    <div class="btn-group"> 
+                        <button class="btn btn-default">$178</button><button class="btn btn-default">BUY NOW</button>
                     </div>
                 </div>
 
@@ -60,7 +59,7 @@
 
                 <div class="element">
                     <select id="" class="colorfull-ui" name="">
-                        <option value="type">TYPE</option>
+                        <option value="type">Type</option>
                     </select>
                 </div>
 
@@ -93,32 +92,30 @@
                 </div>
 
                 <div class="element">
-                    <input type="submit" class="colorfull-ui info" value="&#xf199 SUBMIT">
+                    <input type="submit" class="colorfull-ui info" value="SUTMIT">
                 </div>
 
                 <div class="element">
-                    <input type="email" class="colorfull-ui email valid" value="424087283@qq.com"> 
+                    <input type="email" class="colorfull-ui email valid" placeholder="424087283@qq.com"> 
                 </div>
             </div>
 
             <div class="row">
                 <div class="element">
                     <select id="" class="colorfull-ui big" name="">
-                        <option value="one">one</option>
-                        <option value="two">two</option>
-                        <option value="three">three</option>
+                        <option value="one">One</option>
                     </select>
                 </div>
 
                 <div class="element">
                     <div class="input-group">
-                        <input type="text" class="colorfull-ui info" readonly value="5 items in your cart">
+                        <p class="colorfull-ui info">5 items in your cart</p>
                         <span class="fa fa-cart-plus icon big primary"></span>
                     </div>
                 </div>
 
                 <div class="element">
-                    <input type="email" class="colorfull-ui email" value="Email"> 
+                    <input type="email" class="colorfull-ui email" placeholder="Email"> 
                 </div>
             </div>
 
@@ -372,7 +369,7 @@
 
                 <div class="element">
                     <div class="input-group visa">
-                        <input type="number" class="colorfull-ui">
+                        <input type="text" class="colorfull-ui">
                         <span class="fa fa-cc-visa icon"></span>
                     </div>
                 </div>
