fix icon button style disapear error;

--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row">
                 <div class="element">
-                    <button class="btn btn-primary"> <span class="fa fa-cart-plus icon" aria-hidden="true"></span> ADD TO CART </button>
+                    <button class="btn btn-primary"> <span class="fa fa-cart-plus icon primary" aria-hidden="true"></span> ADD TO CART </button>
                 </div>            
 
                 <div class="element">
