fix checkbox error;

--- a/demo.html
+++ b/demo.html
@@ -253,7 +253,19 @@
                 </div>
 
                 <div class="element">
-                    <input type="checkbox" class="colorfull-ui"> 
+                    <div class="form-control checkbox">
+                        <input type="checkbox" class="colorfull-ui"> 
+                        <span class="icon check"><i class="fa fa-check" aria-hidden="true"></i></span>
+                        <span class="icon circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    </div>
+                </div>
+
+                <div class="element">
+                    <div class="form-control checkbox checked">
+                        <input type="checkbox" class="colorfull-ui"> 
+                        <span class="icon close"><i class="fa fa-close" aria-hidden="true"></i></span>
+                        <span class="icon circle"><i class="fa fa-circle" aria-hidden="true"></i></span>
+                    </div>
                 </div>
 
                 <div class="element">
