fix select error;

--- a/demo.html
+++ b/demo.html
@@ -58,9 +58,14 @@
                 </div>
 
                 <div class="element">
-                    <select id="" class="colorfull-ui" name="">
-                        <option value="type">Type</option>
-                    </select>
+                    <div class="form-control select">
+                        <select id="" class="colorfull-ui" name="">
+                            <option value="type">Type</option>
+                        </select>
+                        <span class="icon chevron-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                        <!-- <span class="icon check"><i class="fa fa-check" aria-hidden="true"></i></span>
+                        <span class="icon close"><i class="fa fa-close" aria-hidden="true"></i></span> -->
+                    </div>
                 </div>
 
                 <div class="element">
@@ -102,9 +107,12 @@
 
             <div class="row">
                 <div class="element">
-                    <select id="" class="colorfull-ui big" name="">
-                        <option value="one">One</option>
-                    </select>
+                    <div class="form-control select">
+                        <select id="" class="colorfull-ui big" name="">
+                            <option value="one">One</option>
+                        </select>
+                        <span class="icon chevron-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                    </div>
                 </div>
 
                 <div class="element">
@@ -137,8 +145,11 @@
                 </div>
 
                 <div class="element">
-                    <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Female
-                    <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Male
+                    <div class="form-control radio">
+                        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Female
+                        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Male
+                    </div>
+
                 </div>
 
                 <div class="element">
