fix checkbox error;

--- a/demo.html
+++ b/demo.html
@@ -146,8 +146,10 @@
 
                 <div class="element">
                     <div class="form-control radio">
-                        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Female
-                        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Male
+                        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"><span class="icon check"><i class="fa fa-check" aria-hidden="true"></i></span>
+                        Female
+                        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"><span class="icon check"><i class="fa fa-check" aria-hidden="true"></i></span>
+                        Male
                     </div>
 
                 </div>
@@ -216,7 +218,9 @@
                 </div>
 
                 <div class="element">
-                    <input type="checkbox" class="colorfull-ui single-checkbox" name="single-checkbox"> Remeber me 
+                    <div class="form-control single-checkbox">
+                        <input type="checkbox" class="colorfull-ui" name="single-checkbox"><span class="icon check"><i class="fa fa-check" aria-hidden="true"></i></span> Remeber me 
+                    </div>
                 </div>
 
                 <div class="element">
