--- a/index.html
+++ b/index.html
@@ -3,156 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>colorfull ui demo</title>
-    <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <!-- basic label -->
-    <div>
-        <span class="text-label sale">sale</span>
-        <span class="text-label hot">hot</span>
-        <span class="text-label new">new</span>
-    </div>
-
-    <br />
-    <br />
-
-    <!-- sale size label -->
-    <ul class="sale-size">
-        <li><a href="#">XS</a></li>
-        <li class="active"><a href="#">S</a></li>
-        <li><a href="#">M</a></li>
-        <li><a href="#">L</a></li>
-        <li><a href="#">XL</a></li>
-    </ul>
-
-    <div style="clear: both"></div>
-
-    <br />
-    <br />
-
-    <!--progress bar -->
-    <div class="timing-progress">
-        <div class="progress-bar"></div>
-    </div>
-
-    <br />
-
-    <div class="progress">
-        <div class="progress-bar"></div>
-    </div>
-
-    <br />
-    <br />
-    <!--redefined form input-->
-    <div class="">
-        <input type="radio" class="colorfull-ui">
-
-        <input type="radio" class="colorfull-ui checked">
-
-        <input type="checkbox" class="colorfull-ui"> 
-
-        <input type="email" class="colorfull-ui email" value="Email"> 
-
-        <input type="email" class="colorfull-ui email valid" value="424087283@qq.com"> 
-
-        <input type="text" class="colorfull-ui number" value="1">
-
-        <select id="" class="colorfull-ui" name="">
-            <option value="one">one</option>
-            <option value="two">two</option>
-            <option value="three">three</option>
-        </select>
-
-        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Female
-        <input type="radio" class="colorfull-ui single-checkbox" name="single-checkbox"> Male
-
-        <input type="checkbox" class="colorfull-ui single-checkbox" name="single-checkbox"> Remeber me 
-        
-    </div>
-
-
-    <br />
-    <div>
-        <span class="tag tag-free"><i class="icon icon-circle"></i> Free</span>
-        <span class="tag tag-like"><i class="fa fa-heart-o icon icon-like" aria-hidden="true"></i> 345</span>
-        <span class="tag tag-share"><i class="fa fa-share-square-o icon icon-share"></i> Share</span>
-        <span class="tag tag-calendar"><i class="fa fa-calendar icon icon-calendar"></i> Date of Birth</span>
-
-        <span class="tag tag-stars"><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i><i class="fa fa-star-o icon icon-star"></i> 439 reviews</span>
-        <span class="tag tag-done">Done</span>
-
-        <span class="tag tag-dollar"><i class="icon icon-circle"></i> $100</span>
-
-        <br />
-        <br />
-        <span class="tag tag-cart">Cart</span>
-
-        <br />
-        <br />
-        <span class="tag tag-checkout">Checkout</span>
-
-        <br />
-        <br />
-        <span class="tag tag-shipping">Shipping</span>
-
-    </div>
-
-    <div>
-        <span class="social social-twitter">
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-        </span>
-        <span class="social social-facebook">
-            <i class="fa fa-facebook-f" aria-hidden="true"></i>
-        </span>
-        <span class="social social-google">
-            <i class="fa fa-google" aria-hidden="true"></i>
-        </span>
-    </div>
-
-    <br />
-    <div>
-        <button class="media media-circle-play">
-            <i class="fa fa-play icon" aria-hidden="true"></i>
-        </button>
-
-        <button class="media media-circle-play" style="background: red">
-            <i class="fa fa-play icon" aria-hidden="true"></i>
-        </button>
-
-        <button class="media media-circle-play" style="background: #ddd;">
-            <i class="fa fa-play icon" aria-hidden="true"></i>
-        </button>
-
-        <button class="media media-circle-pause" style="background: #ddd;">
-            <i class="fa fa-pause icon" aria-hidden="true"></i>
-        </button>
-
-        <button class="media media-square-play">
-            <i class="fa fa-play icon" aria-hidden="true"></i>
-        </button>
-
-    </div>
-
-    <br />
-    <div>
-        <button class="btn btn-primary"> <span class="fa fa-cart-plus icon" aria-hidden="true"></span> ADD TO CART </button>
-
-        <button class="btn btn-primary"> <span class="fa fa-check icon" aria-hidden="true"></span> Apply filter </button>
-
-        <button class="btn btn-default"> Modern <span class="fa fa-remove icon" aria-hidden="true"></span> </button>
-
-        <button class="btn btn-default">Reset filter <span class="fa fa-remove icon" aria-hidden="true"></span></button>
-
-        <button class="btn btn-info">VISIT STORE <span class="fa fa-chevron-right icon" aria-hidden="true"></span></button>
-
-        <button class="btn"><span class="fa fa-chevron-left icon" aria-hidden="true"></span> BACK TO SHOP</button>
-
-        <div class="btn-group">
-            <button class="btn btn-default">$178</button>
-            <button class="btn btn-default">BUY NOW</button>
-        </div>
-
-    </div>
+    <p>tiny demo, please use chrome or firefox</p>
+    <a href="demo.html">basic demo</a>
 </body>
 </html>
